[package]
name = "opengl_playground"
version = "0.0.1"
authors = ["GCodergr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"

[dependencies.sdl2]
version = "0.33.0"
default-features = false
#features = ["image", "ttf"]